churchApp/src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "@ionic/angular/css/normalize.css";
@import "@ionic/angular/css/structure.css";
@import "@ionic/angular/css/typography.css";
@import "@ionic/angular/css/display.css";

/* Optional CSS utils that can be commented out */
@import "@ionic/angular/css/padding.css";
@import "@ionic/angular/css/float-elements.css";
@import "@ionic/angular/css/text-alignment.css";
@import "@ionic/angular/css/text-transformation.css";
@import "@ionic/angular/css/flex-utils.css";


html,
body {
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    position: static;
}

@font-face {
    font-family: 'IndieFlower';
    src: url('./assets/fonts/IndieFlower-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'NotoSerif';
    src: url('./assets/fonts/NotoSerif-VariableFont_wdth.ttf') format('truetype');
}

@font-face {
    font-family: 'NotoSans';
    src: url('./assets/fonts/NotoSans-Regular.ttf') format('truetype');
}

ion-content {
    --ion-background-color: var(--ion-color-tertiary) !important;
    --ion-background-color: linear-gradient(28deg, var(--ion-color-tertiary) 0%, rgba(37, 61, 92, 1) 100%) !important;
    // --ion-background-color: rgb(101, 102, 104) !important;
    // --ion-background-color: linear-gradient(28deg, rgb(101, 102, 104) 0%, rgba(37, 61, 92, 1) 100%) !important;
}

ion-tab-bar {
    position: absolute;
    bottom: 0;
    width: 100%;
    z-index: 10;
    transition: transform 0.4s cubic-bezier(0.4, 0.0, 0.2, 1);
    transform: translateY(0);
    will-change: transform;
}

ion-tab-bar.tabs-hidden {
    transform: translateY(100%);
}
ion-card {
    opacity: 0.85;
}

ion-label {
    color: white;
}

ion-icon {
    font-size: 22px;
    color: white;
    cursor: pointer;
}

ion-datetime {
    --background: var(--ion-item-background, var(--ion-background-color, #fff));
}

.customSelect {
    --background: var(--ion-item-background);

    .alert-radio-label {
        color: white;
    }
}

ion-loading.custom-loading {
    .loading-wrapper {
        background: transparent url("assets/icons/heartbeat-logo.gif")no-repeat center;
        background-size: 110px 110px;
        padding: 40px;
        border-radius: 0.8rem;
        box-shadow: none;
    }

    .loading-content {
        color: var(--ion-color-dark);
        background: rgba(116, 117, 129, 0.25);
        -webkit-box-shadow: 10px 10px 78px 0px var(--ion-color-dark);
        -moz-box-shadow: 10px 10px 78px 0px var(--ion-color-dark);
        box-shadow: 10px 10px 78px 0px var(--ion-color-dark);
        text-align: center;
    }
}

body.light-theme {
    .custom-loading {
        .loading-content {
            -webkit-box-shadow: 10px 10px 78px 0px var(--ion-color-light);
            -moz-box-shadow: 10px 10px 78px 0px var(--ion-color-light);
            box-shadow: 10px 10px 78px 0px var(--ion-color-light);
        }
    }
}

.custom-radio-button-group {
    display: flex;
    font-size: small;
    gap: 16px;
}


.verse-selector-popover {
    --width: 80vw;
    --height: 80vh;
    bottom: 0;

    &::part(content) {
        --background: #1d2935;
    }
}

.versesPopover {
    --height: 45dvh;
}

@media (width > 600px) {
    .versesPopover {
        --width: 60vw;
        --height: 50dvh;
    }
}

@media (width > 900px) {
    .versesPopover {
        --width: 40vw;
    }
}

.productToast {
    color: white;
}

.badge-verse {
    color: white;
    margin-right: 5px;
    display: flex;
    align-items: center;
    margin-bottom: 5px;
    border-radius: 25px;
    padding-top: 6px;
    padding-bottom: 6px;

    ion-icon {
        margin: -3px -3px -3px 2px;
    }
}

.bibleAestheticText {
    font-family: "NotoSerif";
    line-height: 35px;
}

.bibleSimpleText {
    font-family: "NotoSans";
    line-height: 35px;
}


.versesPopover::part(content) {
    max-width: 90vw;
    max-height: 80vh;
    border-radius: 12px;
}

.hidden {
    display: none;
}

.markdown-content {
    white-space: normal;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-width: 100%;
}

.markdown-content pre,
.markdown-content code {
    white-space: pre-wrap;
    word-wrap: break-word;
    overflow-x: auto;
}

.sectionTitle {
    font-style: italic;
    color: lightgray;
}
.verseNumber {
    font-size: small;
    color: var(--ion-color-medium);
}

.underlineVerse {
    text-decoration: underline var(--ion-color-primary);
}

.markTerm {
    background-color: var(--ion-color-warning);
}

.topScroller {
    z-index: 999;
    position: fixed;
    max-width: 45px;
    bottom: 80px;
    right: 20px;
    border-radius: 20px;
    cursor: pointer;

    opacity: 0;
    transform: scale(0.8);
    pointer-events: none;
    transition: opacity 0.5s ease, transform 0.5s ease;

    &.visible {
        opacity: 1;
        transform: scale(1);
        pointer-events: auto;
    }

    ion-icon {
        font-size: 45px;
    }
}

.ios #audio-player {
    margin-bottom: -18px !important;
}


.light-theme {
    .plainBibleBackground {
        --background: white;
        --color: #494949;
    }

    .sectionTitle {
        color: var(--ion-color-medium)
    }
}

.dark-theme .plainBibleBackground {
    --background: black;
    --color: white;
}

